--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
   package="com.document.scanner.flutter.document_scanner_flutter">
     <uses-feature
         android:name="android.hardware.camera"
@@ -20,5 +21,11 @@
             android:exported="true"
             android:label="@string/app_name" >
         </activity>
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.com.scanlibrary.provider"
+            tools:node="merge"
+            tools:replace="android:authorities">
+        </provider>
     </application>
 </manifest>
